discussion/kv_engine/179286/179286_rev15_discussion.txt
======================================================================================================================
DESCRIPTION:

Move the server interface class includes into a new directory

Change-Id: Id839ab6df2c61328a3a9d6915806f80f83695491

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-09-21 07:44:09.000000000
Message: 
Uploaded patch set 15.
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-09-21 07:45:26.000000000
Message: 
Patch Set 15:

(1 comment)

This change is ready for review.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-21 07:47:41.000000000
Message: 
Patch Set 15: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20517/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/server_iface/core.h:14:10: error: "memcached/types.h" file not found [clang-diagnostic-error]
#include "memcached/types.h"
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20517/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/server_iface/core.h:14:10:
error: "memcached/types.h" file not found [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20517/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19740/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-21 08:07:05.000000000
Message: 
Patch Set 15: -Code-Review

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21879/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21879/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49526/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10226/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22864/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22493/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10324/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23651/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30892/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
